[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/leak.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/leak_pylon.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/MemoryLeak.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 114.453, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 25 )

[node name="MemoryLeak" type="Node2D"]
script = ExtResource( 3 )

[node name="LeakArea" type="Area2D" parent="."]
position = Vector2( -178, -178 )
scale = Vector2( 2.56, 3.56 )

[node name="Sprite" type="Sprite" parent="LeakArea"]
position = Vector2( -63.8672, 0 )
scale = Vector2( 2.27734, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeakArea"]
position = Vector2( -64.4531, 0 )
shape = SubResource( 1 )

[node name="PylonArea" type="Area2D" parent="."]
position = Vector2( -1, -147 )

[node name="Sprite" type="Sprite" parent="PylonArea"]
position = Vector2( 1, 48 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PylonArea"]
position = Vector2( -2, -3 )
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( -2, -158, -80, -121 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="area_entered" from="LeakArea" to="." method="_on_LeakArea_area_entered"]
[connection signal="area_exited" from="LeakArea" to="." method="_on_LeakArea_area_exited"]
[connection signal="area_entered" from="PylonArea" to="." method="_on_PylonArea_area_entered"]
